# render-svg-in-sdl2-haskell

./: .gitignore  LICENSE  README.md  cabal.config  fonty-texture-cache  render-svg-in-sdl2-haskell.cabal  svg-loading.cabal
app/: Main.hs
