name:                render-svg-in-sdl2-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/maiermic/render-svg-in-sdl2-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Maier
maintainer:          maier1michael@gmail.com
copyright:           2017 Michael Maier
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

data-dir:
  assets
data-files:
  *.svg

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable render-svg-in-sdl2-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , render-svg-in-sdl2-haskell
                     , svg-tree        >= 0.6.1    && < 0.7
                     , rasterific-svg  >= 0.3.2    && < 0.4
                     , JuicyPixels     >= 3.2.8.2  && < 4.0
                     , vector          >= 0.12.0.1 && < 0.13
                     , sdl2            >= 2.1.3.1  && < 3.0
  default-language:    Haskell2010

test-suite render-svg-in-sdl2-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , render-svg-in-sdl2-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maiermic/render-svg-in-sdl2-haskell